--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,10 +11,10 @@
       </li>
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item" *ngIf="!authService.isAuthenticated()">
+      <li class="nav-item" *ngIf="!authorized()">
         <a class="nav-link" (click)="login()">Login</a>
       </li>
-      <li class="nav-item" *ngIf="authService.isAuthenticated()">
+      <li class="nav-item" *ngIf="authorized()">
         <a class="nav-link" (click)="logout()">Logout</a>
       </li>
     </ul>
