--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,10 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item" *ngIf="!authorized()">
-        <a class="nav-link" (click)="login()">Login</a>
+        <a class="nav-link" routerLink="/login">Login</a>
       </li>
       <li class="nav-item" *ngIf="authorized()">
-        <a class="nav-link" (click)="logout()">Logout</a>
+        <a class="nav-link" routerLink="/signup">Logout</a>
       </li>
     </ul>
   </div>
