--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,10 @@
-<p>
-  signup works!
-</p>
+<input type="text" class="form-control" placeholder="Username" [(ngModel)]="username">
+<input type="password" class="form-control" placeholder="Password" [(ngModel)]="password">
+<div class="input-group">
+  <span class="input-group-btn">
+        <button class="btn btn-primary" type="button" routerLink="/login">Login</button>
+  </span>
+  <span class="input-group-btn">
+        <button class="btn btn-secondary" type="button" (click)="signup()">Signup</button>
+  </span>
+</div>
